# vlc-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
examples/: cli_player.rs  print_version.rs  winit_player.rs
libvlc-sys/: Cargo.toml  bindings.rs  build.rs
src/: audio.rs  core.rs  enums.rs  lib.rs  media.rs  media_library.rs  media_list.rs  media_list_player.rs  media_player.rs  tools.rs  video.rs  vlm.rs
