[package]
name = "vlc-rs"
version = "0.3.0"
authors = ["T. Okubo <t.okubo.rx78+github@gmail.com>"]

description = "Rust bindings for libVLC media framework."
keywords = ["libVLC", "bindings", "multimedia"]
categories = ["external-ffi-bindings", "multimedia"]
documentation = "https://docs.rs/vlc-rs"
repository = "https://code.videolan.org/videolan/vlc-rs"
homepage = "https://code.videolan.org/videolan/vlc-rs"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
name = "vlc"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
libvlc-sys = "0.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
vswhom = "0.1.0"